--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "enzyme-adapter-react-16": "1.0.0",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
+    "firebase": "4.2.0",
     "moment": "2.18.1",
     "node-sass": "^4.12.0",
     "normalize.css": "7.0.0",
@@ -37,6 +38,8 @@
     "react-redux": "5.0.5",
     "react-router-dom": "4.1.2",
     "redux": "3.7.2",
+    "redux-mock-store": "1.2.3",
+    "redux-thunk": "2.2.0",
     "sass-loader": "^7.1.0",
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
